add style and book-review project

--- a/index.html
+++ b/index.html
@@ -2,9 +2,59 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Projects page for Restart Network</title>
+        <title>Polina Kochneva - WebDeveloper</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
+    <!--
+    - Deploy book review
+    - Make cards:
+    - add images
+    - write explanation
+    - add links
+    - Make footer
+    - Artify:
+    - fix image sizing
+    - fix footer
+-->
     <body>
-        <a href=calculator/index.html>Calculator Project</a>
+        <div class="intro">
+            <h1>Polina Kochneva</h1>
+            <h3>Fullstack Web Developer</h3>
+            <ul>
+                <li>JavaScript</li>
+                <li>PHP</li>
+                <li>MERN</li>
+                <li>LAMP</li>
+            </ul>
+        </div>
+        <div class="card-deck">
+            <div class="card bg-dark">
+                <img class="card-img-top" src=".../100px200/" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Work with Nature</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+            <div class="card bg-dark">
+                <img class="card-img-top" src=".../100px200/" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Artify</h5>
+                    <p class="card-text">   FIX IMG HEIGHT  This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+            <div class="card bg-dark">
+                <img class="card-img-top" src=".../100px200/" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Books Reviews</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            linkedin, github, mail
+        </footer>
     </body>
 </html>
+
+<!-- <a href=calculator/index.html>Calculator Project</a> -->
