--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <!--
-    - Deploy book review
-    - Make cards:
-    - add images
-    - write explanation
-    - add links
     - Make footer
+    - add down button
+    - 
     - Artify:
     - fix image sizing
     - fix footer
-    - Books:
-    -fix js
+
 -->
     <body>
         <div class="intro">
@@ -32,24 +28,30 @@
         </div>
         <div class="card-deck">
             <div class="card bg-dark">
-                <img class="card-img-top" src=".../100px200/" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Work with Nature</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-            </div>
-            <div class="card bg-dark">
-                <img class="card-img-top" src=".../100px200/" alt="Card image cap">
+                <a href="https://artify-me.herokuapp.com" target="_blank">
+                    <img class="card-img-top" src="img/artify.png" alt="Artify webpage">
+                </a>
                 <div class="card-body">
                     <h5 class="card-title">Artify</h5>
-                    <p class="card-text">   FIX IMG HEIGHT  This card has supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Get new images from MetMuseum every day and educate yourself. Simple project made with React.js ang MetMuseum API.</p>
                 </div>
             </div>
             <div class="card bg-dark">
-                <img class="card-img-top" src=".../100px200/" alt="Card image cap">
+                <a href="https://adoptarainforest.herokuapp.com" target="_blank">
+                    <img class="card-img-top" src="img/nature.png" alt="Work with Nature Fondation app webpage">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Work with Nature</h5>
+                    <p class="card-text">Project for <a href="https://www.adoptrainforest.com">The Work with Nature Foundation</a>. It has been build within one week during Impact Week at Restart.Network in a team four people using PHP CodeIgniter framework.  You can access full functionality of a web aplication with sample user: <span>cat@mail.nl</span></p>
+                </div>
+            </div>
+            <div class="card bg-dark">
+                <a href="https://hanyauku.github.io/48hours/48hrs.html" target="_blank">
+                    <img class="card-img-top" src="img/book.png" alt="Book reviews webpage">
+                </a>
                 <div class="card-body">
                     <h5 class="card-title">Books Reviews</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text">My first ever individual finished project that provides book reviews from Goodreads website. Made with plain HTML and JQuery library.</p>
                 </div>
             </div>
         </div>
