style changes, fix lincs

--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
                     <li>LAMP</li>
                 </ul>
                 <div class="links">
-                    <button type="button" class="btn btn-default btn-lg">
-                        <i class="fab fa-linkedin"></i>
-                    </button>
-                    <button type="button" class="btn btn-default btn-lg">
-                        <i class="fab fa-github"></i>
-                    </button>
-                    <button type="button" class="btn btn-default btn-lg">
-                        <i class="fab fa-mailchimp"></i>
-                    </button>
+                    <a href="https://www.linkedin.com/in/polina-kochneva/" target="_blank">
+                        <button type="button" class="btn btn-default btn-lg">
+                            <i class="fab fa-linkedin"></i>
+                        </button>
+                    </a>
+                    <a href="https://github.com/Hanyauku" target="_blank">
+                        <button type="button" class="btn btn-default btn-lg">
+                            <i class="fab fa-github"></i>
+                        </button>
+                    </a>
+                    <a href="mailto:kochneva.p@gmail.com">
+                        <button type="button" class="btn btn-default btn-lg">
+                            <i class="fab fa-mailchimp"></i>
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
